refactored css for Articles-Search-Response to fix component spacing

--- a/src/Components/css/Main.css
+++ b/src/Components/css/Main.css
@@ -40,6 +40,19 @@
   grid-column: 2/3;
   grid-row: 1/2;
   height: 42vh;
+  display: grid;
+  grid-template-rows: 1fr 4fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.Articles-Search-Response-Title {
+  grid-row: 1 / 2;
+  grid-column: 1 / 3;
+}
+
+.Articles-Search-Results-Sort {
+  grid-row: 1 / 2;
+  grid-column: 3 / 4;
 }
 
 .Articles-Search-Results {
@@ -47,7 +60,9 @@
   background: rgb(50, 131, 253, 0.5);
   padding: 0em;
   margin: 0em;
-  height: 35vh;
+  height: 33vh;
+  grid-row: 2 / 3;
+  grid-column: 1 / 4;
 }
 
 #Articles-Search-ID {
